fix: use word-break property to fix overflow on Safari

--- a/assets/css/_presets.scss
+++ b/assets/css/_presets.scss
@@ -18,6 +18,7 @@
           text-align: start;
           hyphens: auto;
           overflow-wrap: anywhere;
+          word-break: break-all;
         }
       }
 
